// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Danger 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-assertive);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-assertive-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-assertive-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Button Default 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    disabled={true}
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Button Fixed 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Button Focus 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onMouseOver={[Function]}
  >
    Mouse over to focus
  </button>
</div>
`;

exports[`Storyshots Button Layout Example 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-surface6);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c1:focus {
  outline: none;
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active,
.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus,
.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-surface6-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-surface6-press);
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-assertive);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c2:focus {
  outline: none;
}

.c2:not(:disabled):not([aria-disabled]):active,
.c2[aria-disabled='false']:active,
.c2:not(:disabled):not([aria-disabled]):focus,
.c2[aria-disabled='false']:focus,
.c2:not(:disabled):not([aria-disabled]):focus-visible,
.c2[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-assertive-hover);
}

.c2:not(:disabled):not([aria-disabled]):active,
.c2[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-assertive-press);
}

.c2:disabled,
.c2[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-brand);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c3:focus {
  outline: none;
}

.c3:not(:disabled):not([aria-disabled]):active,
.c3[aria-disabled='false']:active,
.c3:not(:disabled):not([aria-disabled]):focus,
.c3[aria-disabled='false']:focus,
.c3:not(:disabled):not([aria-disabled]):focus-visible,
.c3[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3:not(:disabled):not([aria-disabled]):hover,
.c3[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-brand-hover);
}

.c3:not(:disabled):not([aria-disabled]):active,
.c3[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-brand-press);
}

.c3:disabled,
.c3[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c4:focus {
  outline: none;
}

.c4:not(:disabled):not([aria-disabled]):active,
.c4[aria-disabled='false']:active,
.c4:not(:disabled):not([aria-disabled]):focus,
.c4[aria-disabled='false']:focus,
.c4:not(:disabled):not([aria-disabled]):focus-visible,
.c4[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c4:not(:disabled):not([aria-disabled]):hover,
.c4[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c4:not(:disabled):not([aria-disabled]):active,
.c4[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c4:disabled,
.c4[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <div
    css="
      display: grid;
      gap: 24px;
    "
  >
    <div
      css="
        display: grid;
        grid: auto / auto-flow min-content;
        gap: 8px;
      "
    >
      <button
        className="c0"
      >
        Grid
      </button>
      <button
        className="c1"
      >
        Layout
      </button>
      <button
        className="c2"
      >
        Sample
      </button>
    </div>
    <div
      css="
        display: grid;
        grid: auto-flow auto / 392px;
        gap: 8px;
      "
    >
      <button
        className="c3"
      >
        Submit
      </button>
      <button
        className="c4"
      >
        Cancel
      </button>
    </div>
    <div
      css="
        display: flex;

        & > * + * {
          margin-left: 8px;
        }
      "
    >
      <button
        className="c0"
      >
        Flex
      </button>
      <button
        className="c1"
      >
        Layout
      </button>
      <button
        className="c2"
      >
        Sample
      </button>
    </div>
    <div
      css="
        display: flex;
        flex-direction: column;
        width: 392px;

        & > * + * {
          margin-top: 8px;
        }
      "
    >
      <button
        className="c3"
      >
        Submit
      </button>
      <button
        className="c4"
      >
        Cancel
      </button>
    </div>
    <div
      css="
        display: flex;
        flex-direction: column;
        width: 392px;

        & > * + * {
          margin-top: 8px;
        }
      "
    >
      <button
        className="c3"
      >
        すべて見る
      </button>
      <button
        className="c0"
      >
        作品を投稿
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Navigation 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-surface6);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-surface6-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-surface6-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Button Nihongo 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onClick={[Function]}
  >
    日本語だよ
  </button>
</div>
`;

exports[`Storyshots Button Overlay 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-surface4);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-surface4-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-surface4-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-brand);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-brand-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-brand-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Button Small 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 16px;
  padding-left: 16px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 32px;
}

.c0:focus {
  outline: none;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;
